--- a/blogpost.html
+++ b/blogpost.html
@@ -13,8 +13,12 @@
             <div id="post ">    
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Y este es el párrafo & de inicio donde vamos a explicar cosas Increíbles y buenardas & que se pueden hacer con ramas</p>
+                <p><img src="https://miro.medium.com/v2/resize:fit:1100/format:webp/0*4tFOVznDAMEjIqQ2." width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir informacion y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Exepto si eres un rockstar. Pero estadisticamente no lo eres ... por ahora.</p>
                 <p>Suscribete y dale like papu</p>
+            </div>
+            <div id="footer">
+                Hecho con amor por Chema
             </div>
         </div>
     </body>
